# LUMINARY-On-Chain-Skill-Attestation-Protocol

./: .gitignore  README.md
.agents/: AGENTS.md
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/attestation-registry/: Cargo.toml
contracts/attestation-registry/src/: lib.rs  test.rs
contracts/attestation-registry/test_snapshots/test/: test_active_vs_total_attestations.1.json  test_endorse_attestation.1.json  test_initialize.1.json  test_issue_attestation.1.json  test_multiple_attestations_for_subject.1.json  test_multiple_endorsements.1.json  test_revoke_attestation.1.json
contracts/reputation-scorer/: Cargo.toml
contracts/reputation-scorer/src/: lib.rs  test.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: LevelPips.tsx  Navigation.tsx  Notifications.tsx  StarField.tsx  TierBadge.tsx
frontend/src/lib/: constants.ts  mockData.ts  stellar.ts  store.ts
frontend/src/pages/: Attest.tsx  Explore.tsx  Leaderboard.tsx  Profile.tsx
frontend/src/styles/: globals.css
frontend/src/test/: luminary.test.tsx
scripts/: deploy.sh
