[package]
name = "attestation-registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true }
reputation-scorer = { path = "../reputation-scorer" }

[features]
testutils = ["soroban-sdk/testutils", "reputation-scorer/testutils"]
